--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
   "devDependencies": {
     "@babel/preset-env": "^7.4.5",
     "@diegofrayo/eslint-config": "1.0.0",
+    "@hot-loader/react-dom": "^16.8.6",
     "babel-jest": "^24.8.0",
     "eslint": "latest",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "microbundle": "^0.11.0",
     "prettier": "^1.16.4",
-    "react": "^16.8.4"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.12.10"
   },
   "peerDependencies": {
     "react": "^16.8.4"
