--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": {
     "name": "Diego Rayo",
     "email": "diegofrayo@gmail.com",
-    "url": "https://diegofrayo.netlify.com"
+    "url": "https://diegofrayo.netlify.app"
   },
   "repository": {
     "url": "https://github.com/diegofrayo/styles.git",
@@ -36,6 +36,7 @@
     "babel-jest": "^24.8.0",
     "eslint": "latest",
     "husky": "^1.3.1",
+    "jest": "^25.3.0",
     "lint-staged": "^8.1.5",
     "microbundle": "^0.11.0",
     "prettier": "^1.16.4",
